--- a/resources/css/sass/pages/_header.scss
+++ b/resources/css/sass/pages/_header.scss
@@ -153,7 +153,7 @@
                 color: $dark-gray;
                 font-size: 15px;
                 font-family: "Helvetica Neue";
-                padding-top: 1px;
+                padding-top: -2px;
                 text-transform: uppercase;
 
                 &.blue{
