--- a/resources/css/sass/pages/_matches.scss
+++ b/resources/css/sass/pages/_matches.scss
@@ -219,7 +219,7 @@ $border-color-dark: #e2e0e1;
         }
         &.category-10{
           font-size: 11px;
-          top: 45%;
+          top: 60%;
         }
       }
   }
